@@ -1,5 +1,6 @@
 Changelog for ghcid
 
+    #61, deal with drive letters in files (for stack on Windows)
     #58, improve the --help message
 0.6.1
     Add --reload to add files that reload, but do not restart
